--- a/vortraege-2021/rueckblick-muenster-2020.html
+++ b/vortraege-2021/rueckblick-muenster-2020.html
@@ -100,6 +100,9 @@
         border-color: #F89406;
       }
 
+      .remark-slide-content.center img {
+          margin-right: 40px;
+      }
     </style>
   </head>
   <body>
@@ -110,10 +113,16 @@ class: center, middle
 # Civic Tech Projekte in Münster 2020
 ## Was lief gut, was lief schlecht?
 
-(Speakernotes anzeigen mit "P"-Taste)
+<img src="logo-c4muenster.png" height="100">
+<img src="logo-smartcity.png" height="60">
+<img src="logo-citeq.jpg" height="90">
+
 
 
 ???
+
+- Navigieren mit Pfeiltasten
+- Speakernotes anzeigen mit "P"-Taste
 
 Speaker-Reihenfolge:
 Folie 1+2 TW
@@ -128,9 +137,10 @@ Dann      TW
 
 1. Kurz notiert
 2. Leezenflow
-3. Münster zählt
+3. Münster.jetzt
 4. Meine Stadt Transparent
-5. Diskussion
+5. Fazit & Idee
+6. Diskussion
 
 ---
 
@@ -170,6 +180,20 @@ Wie wäre es, wenn ich hier die Ampelschaltung ändere? Verkehrsplanung als Comp
 ]
 ---
 
+# Leezenflow 👍
+
+.left-column[
+![](https://raw.githubusercontent.com/codeformuenster/opendataday/gh-pages/vortraege-2021/leezenflow.jpg)
+]
+.right-column[
+- Idee vom Münsterhack 2019
+- Aufgenommen durch Smart City Münster
+- Design durch Leonie Winkelmann & Magdalena Schmitz im Rahmen einer Bachelorarbeit erstellt
+- Prototyp & Evaluation ab Frühling 2021 in Münster
+- Viel ehrenamtliche Arbeit, aber auch viel hauptamtliche Arbeit nötig
+]
+---
+
 # Münster.jetzt 👍
 
 .left-column[
@@ -183,20 +207,6 @@ Wie wäre es, wenn ich hier die Ampelschaltung ändere? Verkehrsplanung als Comp
 - Termine auf Info-Bildschirmen am Bahnhof ausspielen
 - Software-Prototyp wurde gebaut, Umsetzung wurde von der DB gefördert
 
-]
----
-
-# Leezenflow 👍
-
-.left-column[
-![](https://raw.githubusercontent.com/codeformuenster/opendataday/gh-pages/vortraege-2021/leezenflow.jpg)
-]
-.right-column[
-- Idee vom Münsterhack 2019
-- Aufgenommen durch Smart City Münster
-- Design durch Leonie Winkelmann & Magdalena Schmitz im Rahmen einer Bachelorarbeit erstellt
-- Prototyp & Evaluation ab Frühling 2021 in Münster
-- Viel ehrenamtliche Arbeit, aber auch viel hauptamtliche Arbeit nötig
 ]
 ---
 
