--- a/vortraege-2021/rueckblick-muenster-2020.html
+++ b/vortraege-2021/rueckblick-muenster-2020.html
@@ -217,7 +217,7 @@ Wie wäre es, wenn ich hier die Ampelschaltung ändere? Verkehrsplanung als Comp
 .right-column[
 - Hohe technische Anforderungen
 - Komplexes Scraping des Ratsinformationssystems
-- [OParl](oparl.org) wird endlich beauftragt
+- [OParl](https://oparl.org) wird endlich beauftragt
 - Ehrenamt schon lange fertig, Hauptamt verzögert
 ]
 ---
@@ -225,7 +225,7 @@ Wie wäre es, wenn ich hier die Ampelschaltung ändere? Verkehrsplanung als Comp
 # Fazit aus den Projekten 2020
 
 <div class="happy box">
-.label[Gute Voraussetzungen für ein lanfristig laufendes Projekt]
+.label[Gute Voraussetzungen für ein langfristig laufendes Projekt]
 
  - Daten verfügbar
  - Einfache Technik
