add project links and contact information

--- a/vortraege-2021/rueckblick-muenster-2020.html
+++ b/vortraege-2021/rueckblick-muenster-2020.html
@@ -15,6 +15,16 @@
       }
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
 
+      .projectLink {
+        margin-top: 5px;
+        display: block;
+        color: #777;
+        font-style: italic;
+      }
+      .projectLink a {
+        color: #555;
+      }
+
       /* Two-column layout */
       .left-column {
         color: #777;
@@ -117,8 +127,6 @@ class: center, middle
 <img src="logo-smartcity.png" height="60">
 <img src="logo-citeq.jpg" height="90">
 
-
-
 ???
 
 - Navigieren mit Pfeiltasten
@@ -144,7 +152,7 @@ Dann      TW
 
 ---
 
-# kurz notiert 1/2
+# Kurz notiert 1/2
 .left-column[
   <img src="opendatabot.jpg" width="200">
   <img src="muenster-was-geht.jpg" width="200">
@@ -153,16 +161,20 @@ Dann      TW
 .right-column[
 #### 1. Open Data Münster Twitter Bot 👍
 Seit März 2020 automatische Tweets bei neuen Daten im open-Data-Portal
+[(Quellcode)](https://github.com/codeformuenster/dkan-newest-dataset-notifier)<br/>
+.projectLink[Link: [https://twitter.com/OpenData_MS](https://twitter.com/OpenData_MS)]
 
 #### 2. Münster was geht? 👎
-Münsterhack 2020: Veranstaltungsempfehlungen a la Tinder, powered by open-data
+Münsterhack 2020: Veranstaltungsempfehlungen a la Tinder, powered by open-data<br/>
+.projectLink[Link: [https://demo.muenster-was-geht.de/](https://demo.muenster-was-geht.de/)]
 
 #### 3. Stadtradeln-Visualisierung 👍
-Eine Stadt mit vielen RadfahrerInnen
+Eine Stadt mit vielen RadfahrerInnen<br />
+.projectLink[Link: [https://codeformuenster.org/stadtradeln-vis](https://codeformuenster.org/stadtradeln-vis)]
 ]
 ---
 
-# kurz notiert 2/2
+# Kurz notiert 2/2
 .left-column[
   <img src="klimawatch.jpg" width="200">
   <img src="unfaelle.jpg" width="200">
@@ -171,12 +183,16 @@ Eine Stadt mit vielen RadfahrerInnen
 .right-column[
 #### 4. Klimawatch update 👍
 Klimawatch: 9 neue Städte, 3 in der Pipeline, Hilfe gern gesehen
+.projectLink[Link: [https://www.klimawatch.de](https://www.klimawatch.de)]
+
 
 #### 5. Update der Unfall-Visualisierung 🤞
 Unfallvisualisierung mit Daten seit 2007; leider ab 2019 nur Daten mit weniger Details vom Unfallatlas NRW
+.projectLink[Link: [https://crashes.codeformuenster.org](https://crashes.codeformuenster.org)]
 
 #### 6. AB-Street 🤞
-Wie wäre es, wenn ich hier die Ampelschaltung ändere? Verkehrsplanung als Computerspiel, powered by open data, WIP
+Wie wäre es, wenn ich hier die Ampelschaltung ändere? Verkehrsplanung als Computerspiel
+.projectLink[Link: [Mehr Infos auf Twitter](https://twitter.com/codeformuenster/status/1336421089153609728)]
 ]
 ---
 
@@ -191,6 +207,9 @@ Wie wäre es, wenn ich hier die Ampelschaltung ändere? Verkehrsplanung als Comp
 - Design durch Leonie Winkelmann & Magdalena Schmitz im Rahmen einer Bachelorarbeit erstellt
 - Prototyp & Evaluation ab Frühling 2021 in Münster
 - Viel ehrenamtliche Arbeit, aber auch viel hauptamtliche Arbeit nötig
+
+.projectLink[Link: [http://www.leezenflow.de](http://www.leezenflow.de)]
+
 ]
 ---
 
@@ -207,6 +226,7 @@ Wie wäre es, wenn ich hier die Ampelschaltung ändere? Verkehrsplanung als Comp
 - Termine auf Info-Bildschirmen am Bahnhof ausspielen
 - Software-Prototyp wurde gebaut, Umsetzung wurde von der DB gefördert
 
+.projectLink[Link: [https://muenster-jetzt.de/info](https://muenster-jetzt.de/info)]
 ]
 ---
 
@@ -219,6 +239,8 @@ Wie wäre es, wenn ich hier die Ampelschaltung ändere? Verkehrsplanung als Comp
 - Komplexes Scraping des Ratsinformationssystems
 - [OParl](https://oparl.org) wird endlich beauftragt
 - Ehrenamt schon lange fertig, Hauptamt verzögert
+
+.projectLink[Link: [https://meine-stadt-transparent.codeformuenster.org](https://meine-stadt-transparent.codeformuenster.org)]
 ]
 ---
 
@@ -253,7 +275,11 @@ Wie wäre es, wenn ich hier die Ampelschaltung ändere? Verkehrsplanung als Comp
 * Und verlässliche Partner, auf deren Schultern die Verantwortung verteilt wird
 * ..und Unterstützung bei der "Partnersuche"
 
-### Idee "Digitale Spielwiese"
+### Projekt "Digitale Spielwiese" (Arbeitstitel)
+
+Ein Gremium wird geschaffen. Dieses Gremium wählt Projekte aus und sucht (externe) "Paten" für die Projekte.
+Für jedes Projekt muss es drei Paten geben:
+
 * "Technischer Pate"
 * "Inhaltlicher Pate"
 * "Monetärer Pate"
@@ -262,8 +288,26 @@ Wie wäre es, wenn ich hier die Ampelschaltung ändere? Verkehrsplanung als Comp
 
 # Diskussion
 
-- Wie können civic-tech-Projekte verstetigt werden?
+- Wie können Civic-Tech-Projekte verstetigt werden?
 - Was ist essentiell für die Unterstützung?
+
+---
+
+# Vielen Dank!
+
+Mehr Informationen:
+
+* Code For Münster - https://codeformuenster.org
+* Open Data Münster - https://opendata.stadt-muenster.de
+* Smart City Münster - https://www.smartcity.ms
+
+Bei weiteren Fragen kontaktieren Sie gern die Open-Data-Koordination der Stadt Münster:
+
+    Thomas Werner
+    opendata@stadt-muenster.de
+    Tel. 0251/492-1909
+
+
 
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
